--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "fideloper/proxy": "~3.3",
         "glissmedia/breadcrumbs": "dev-master",
         "guzzlehttp/guzzle": "^6.3",
+        "ignasbernotas/laravel-model-generator": "^1.2",
         "intervention/image": "^2.4",
         "laravel/framework": "5.5.*",
         "laravel/tinker": "~1.0",
