--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
         "intervention/image": "^2.4",
         "laravel/framework": "5.5.*",
         "laravel/tinker": "~1.0",
-        "zizaco/entrust": "^1.8"
+        "zizaco/entrust": "^1.8",
+        "sunra/php-simple-html-dom-parser": "1.5.2"
     },
     "require-dev": {
         "filp/whoops": "~2.0",
