--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
         "alexusmai/ruslug": "~0.6"
     },
     "require-dev": {
+        "barryvdh/laravel-debugbar": "^3.1",
         "filp/whoops": "~2.0",
         "fzaninotto/faker": "~1.4",
         "mockery/mockery": "0.9.*",
