--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "type": "project",
     "require": {
         "php": ">=7.0.0",
+        "alexusmai/ruslug": "~0.6",
         "caouecs/laravel-lang": "^3.0",
         "doctrine/dbal": "^2.6",
         "fideloper/proxy": "~3.3",
@@ -13,11 +14,11 @@
         "guzzlehttp/guzzle": "^6.3",
         "ignasbernotas/laravel-model-generator": "^1.2",
         "intervention/image": "^2.4",
+        "jenssegers/date": "^3.2",
         "laravel/framework": "5.5.*",
         "laravel/tinker": "~1.0",
-        "zizaco/entrust": "^1.8",
         "sunra/php-simple-html-dom-parser": "1.5.2",
-        "alexusmai/ruslug": "~0.6"
+        "zizaco/entrust": "^1.8"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.1",
