add redirect gliss | fix 4

--- a/public/.htaccess
+++ b/public/.htaccess
@@ -6,9 +6,9 @@
     RewriteEngine On
 
     # Redirect star.gliss to russia startour 301
-    RewriteCond %{HTTP_HOST} ^star.glissmedia\.ru
+    RewriteCond %{HTTP_HOST} ^star.glissmedia.ru
     RewriteRule ^(.*)$ http://russia.startour.ru/$1 [R=301,L]
-    RewriteCond %{HTTP_HOST} ^star.glissmedia\.ru
+    RewriteCond %{HTTP_HOST} ^star.glissmedia.ru
     RewriteRule ^(.*)$ http://russia.startour.ru/$1 [R=301,L]
 
     # Redirect Trailing Slashes If Not A Folder...
