--- a/public/.htaccess
+++ b/public/.htaccess
@@ -5,6 +5,9 @@
 
     RewriteEngine On
 
+    # Redirect bus
+    RedirectMatch 302 /tury/avtobusnyy-tur http://startour.ru/europe/avtobusnyy-tur
+
     # Redirect star.gliss to russia startour 301
     RewriteCond %{HTTP_HOST} ^star.glissmedia.ru
     RewriteRule ^(.*)$ http://russia.startour.ru/$1 [R=301,L]
