--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
         "laravel/framework": "5.5.*",
         "laravel/tinker": "~1.0",
         "sunra/php-simple-html-dom-parser": "1.5.2",
-        "zizaco/entrust": "^1.8"
+        "zizaco/entrust": "^1.8",
+        "marvin255/sletatru": "*"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.1",
